--- a/OpenCode/Base.lproj/Main.storyboard
+++ b/OpenCode/Base.lproj/Main.storyboard
@@ -121,21 +121,11 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZsD-CV-phT" userLabel="ProfileView">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="82B-Sm-Ses">
-                                        <rect key="frame" x="8" y="487" width="584" height="45"/>
-                                        <color key="backgroundColor" red="1" green="0.32644274639999998" blue="0.202241104" alpha="1" colorSpace="calibratedRGB"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                        <state key="normal" title="退出登录"/>
-                                    </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vJB-vA-Yho" userLabel="UserInfo">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="140"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GCx-0h-0CR" userLabel="Avatar">
-                                                <rect key="frame" x="20" y="20" width="100" height="100"/>
-                                            </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Username" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xkR-Hh-vOu" userLabel="Username">
-                                                <rect key="frame" x="128" y="20" width="464" height="47"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Username" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xkR-Hh-vOu" userLabel="Username">
+                                                <rect key="frame" x="128" y="30" width="464" height="37"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <nil key="highlightedColor"/>
@@ -158,12 +148,19 @@
                                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GCx-0h-0CR" userLabel="Avatar">
+                                                <rect key="frame" x="20" y="30" width="100" height="100"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="100" id="MfD-jm-PPf"/>
+                                                    <constraint firstAttribute="height" constant="100" id="vQH-Lc-mRh"/>
+                                                </constraints>
+                                            </imageView>
                                         </subviews>
                                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="xkR-Hh-vOu" secondAttribute="trailing" constant="8" id="4i7-pW-PNH"/>
-                                            <constraint firstItem="xkR-Hh-vOu" firstAttribute="top" secondItem="vJB-vA-Yho" secondAttribute="top" constant="20" id="8cZ-xO-0tq"/>
-                                            <constraint firstItem="GCx-0h-0CR" firstAttribute="top" secondItem="vJB-vA-Yho" secondAttribute="top" constant="20" id="AEK-w9-hyL"/>
+                                            <constraint firstItem="xkR-Hh-vOu" firstAttribute="top" secondItem="vJB-vA-Yho" secondAttribute="top" constant="30" id="8cZ-xO-0tq"/>
+                                            <constraint firstItem="GCx-0h-0CR" firstAttribute="top" secondItem="vJB-vA-Yho" secondAttribute="top" constant="30" id="AEK-w9-hyL"/>
                                             <constraint firstItem="rQR-Mj-h1U" firstAttribute="leading" secondItem="QFv-gB-QCu" secondAttribute="trailing" constant="20" id="AF4-Tj-eZ6"/>
                                             <constraint firstItem="N4D-3d-7M6" firstAttribute="leading" secondItem="GCx-0h-0CR" secondAttribute="trailing" constant="8" id="KpI-Mm-PNc"/>
                                             <constraint firstItem="xkR-Hh-vOu" firstAttribute="leading" secondItem="GCx-0h-0CR" secondAttribute="trailing" constant="8" id="N8B-4R-jag"/>
@@ -175,6 +172,16 @@
                                             <constraint firstAttribute="height" constant="140" id="phM-Ly-IKf"/>
                                         </constraints>
                                     </view>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="82B-Sm-Ses">
+                                        <rect key="frame" x="8" y="487" width="584" height="45"/>
+                                        <color key="backgroundColor" red="1" green="0.32644274639999998" blue="0.202241104" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" title="退出登录"/>
+                                        <connections>
+                                            <action selector="GithubLogout:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="4ll-Ly-kOa"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -208,6 +215,11 @@
                         <outlet property="loginView" destination="9CZ-Zr-ejX" id="RxU-1l-0Iq"/>
                         <outlet property="profileView" destination="ZsD-CV-phT" id="VRE-ah-QYJ"/>
                         <outlet property="searchDisplayController" destination="hAv-qa-VJp" id="vrv-ws-xNo"/>
+                        <outlet property="userAvatar" destination="GCx-0h-0CR" id="AuQ-c5-Y3o"/>
+                        <outlet property="userCompany" destination="rQR-Mj-h1U" id="gCW-cM-1Cs"/>
+                        <outlet property="userEmail" destination="N4D-3d-7M6" id="kGm-X9-Fdo"/>
+                        <outlet property="userLocation" destination="QFv-gB-QCu" id="tIH-bU-lPV"/>
+                        <outlet property="userName" destination="xkR-Hh-vOu" id="c9c-MM-chG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
